@@ -2,6 +2,10 @@ Revision history for Perl module Math::Prime::Util::GMP
 
 0.16 2013-10
 
+    [ADDED]
+
+    - partitions    partition function p(n), OEIS A000041
+
     [FIXES]
 
     - Fixed memory leak in Lucas sequence which impacted many functions.
